[package]
name = "conservation-spectral-v2"
version = "0.2.0"
edition = "2021"
authors = ["SuperInstance"]
description = "Hyper-optimized spectral graph analysis — 10× faster conservation SDK with retro-language insights"
license = "MIT"
repository = "https://github.com/SuperInstance/conservation-spectral-v2"
keywords = ["spectral", "graph", "laplacian", "conservation", "simd"]
categories = ["mathematics", "science", "data-structures"]

[dependencies]
wide = "0.7"
bytemuck = { version = "1.16", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.5"
rand = "0.8"
rand_xoshiro = "0.6"

[[bench]]
name = "spectral_bench"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
target-cpu = "native"
